--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,21 @@
-$primary-color: #ffd700;
+$primary-color: var(--primarycolour);
+
 
 @import 'animate.css';
 
 @font-face {
   font-family: 'Helvetica Neue';
-  srs: url('../assets/fonts/helvetica-neu.ttf') format('tff');
+  srs: url('./assets/fonts/helvetica-neu.ttf') format('tff');
 }
 
 @font-face {
   font-family: 'La Belle Aurore';
-  srs: url('../assets/fonts/LaBelleAurore.woff2') format('woff2');
+  srs: url('./assets/fonts/LaBelleAurore.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Coolvetica';
-  srs: url('../assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
+  srs: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
 }
 
 input,
