--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,17 @@
+:root{
+  --primarycolour : #ffd700;
+  --secondarycolour: #022c43;
+}
+
 html{
   font-size: 62.5%;
 }
 
 body {
   margin: 0;
-  font-family: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
+  font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
-  background: #022c43;
+  background: var(--secondarycolour);
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
