--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,123 +1,187 @@
 .nav-bar {
     background-color: #181818;
-    width: 60px;
+    width: 65px;
     height: 100%;
     position: absolute;
     top: 0;
     z-index: 3;
     min-height: 500px;
 
-    .logo{
-        display: block;
-        padding: 8px 0;
-
-        img{
+    .mobheader{
+        .logo {
             display: block;
-            margin: 8px auto;
-            width: 64px;
-            height: auto;
-
-            &.sub-logo{
-                width: 50px;
+            padding: 8px 0;
+    
+            img {
+                display: block;
+                margin: 8px auto;
+                width: 64px;
+                height: auto;
+    
+                &.sub-logo {
+                    width: 50px;
+                }
+    
             }
-            
+        }
+        .navcontroler{
+            display: none;
         }
     }
-    nav{
-        display: block;
-        text-align: center;
-        position: absolute;
-        height: 210px;
-        top: 50%;
-        margin-top: -120px;
-        width: 100%;
 
-        a{
-            font-size: 22px; 
-            color: #4d4d4e;
+    .mobnav {
+        // background-color: red;
+        position: relative;
+        height: 90%;
+        left: -100%;
+        nav {
             display: block;
-            line-height: 51px;
-            height: 51px;
-            position: relative;
-            text-decoration: none;
+            text-align: center;
+            position: absolute;
+            height: 210px;
+            top: 50%;
+            margin-top: -120px;
+            width: 100%;
 
-            i{
-                transition: all 0.3s ease-out;
-            }
+            a {
+                font-size: 22px;
+                color: #4d4d4e;
+                display: block;
+                line-height: 51px;
+                height: 51px;
+                position: relative;
+                text-decoration: none;
 
-            &:hover{
-                color: var(--primarycolour);
+                i {
+                    transition: all 0.3s ease-out;
+                }
 
-                svg{
+                &:hover {
+                    color: var(--primarycolour);
+
+                    svg {
+                        opacity: 0;
+                    }
+
+                    &:after {
+                        opacity: 1;
+                    }
+                }
+
+                &::after {
+                    content: "";
+                    font-size: 9px;
+                    letter-spacing: 2px;
+                    position: absolute;
+                    bottom: 0;
+                    display: block;
+                    width: 100%;
+                    text-align: center;
                     opacity: 0;
+                    transition: all 0.3s ease-out;
                 }
 
-                &:after{
-                    opacity: 1;
+                &:first-child {
+                    &::after {
+                        content: "HOME";
+                    }
                 }
             }
-            &::after{
-                content: "";
-                font-size: 9px;
-                letter-spacing: 2px;
-                position: absolute;
-                bottom: 0;
-                display: block;
-                width: 100%;
-                text-align: center;
-                opacity: 0;
-                transition: all 0.3s ease-out;
-            }
 
-            &:first-child{
-                &::after{
-                    content: "HOME";
+            a.about-link {
+                &::after {
+                    content: "ABOUT";
                 }
             }
-        }
-        a.about-link{
-            &::after{
-                content: "ABOUT";
-            }
-        }
-        a.project-link{
-            &::after{
-                content: "PROJECTS";
-            }
-        }
-        a.contact-link{
-            &::after{
-                content: "CONTACT";
-            }
-        }
 
-        a.active{
-            svg{
-                color: var(--primarycolour);
+            a.project-link {
+                &::after {
+                    content: "PROJECTS";
+                }
             }
-        }
-    }
 
-    ul{
-        position: absolute;
-        bottom: 20px;
-        width: 100%;
-        display: block;
-        padding: 0;
-        list-style: none;
-        text-align: center;
-        margin: 0;
+            a.contact-link {
+                &::after {
+                    content: "CONTACT";
+                }
+            }
 
-        li{
-            a{
-                padding: 7px 0;
-                display: block;
-                font-size: 15px;
-                line-height: 16px;
-
-                &:hover svg{
+            a.active {
+                svg {
                     color: var(--primarycolour);
                 }
+            }
+        }
+
+        ul {
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+            display: block;
+            padding: 0;
+            list-style: none;
+            text-align: center;
+            margin: 0;
+
+            li {
+                a {
+                    padding: 7px 0;
+                    display: block;
+                    font-size: 15px;
+                    line-height: 16px;
+
+                    &:hover svg {
+                        color: var(--primarycolour);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .nav-bar {
+        position: relative;
+        width: 100%;
+        min-height: 50px;
+        
+        .mobheader {
+            .navcontroler{
+                display: block;
+            }
+            // background-color: red;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-left: 15px;
+            padding-right: 15px;
+
+            svg {
+                font-size: 25px;
+                transition: all 0.3s ease-in;
+                color: var(--primarycolour);
+            }
+        }
+        .mobnav {
+            position: fixed;
+            right: 0;
+            left: 0;
+            height: 50px;
+            transition: transform .2s;
+            background-color: #181818;
+            display: flex;
+            nav {
+                width: 100%;
+                margin-top: 1px;
+                height: 0px;
+                display: flex;
+                align-items: center;
+                justify-content: space-evenly;
+            }
+    
+            ul {
+                display: none;
             }
         }
     }
