--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,3 +1,82 @@
-.navcontainer{
-    // background-color: red;
+.wrapper {
+    .navcontainer {
+        .navlinks {
+            .active {
+                opacity: 1;
+                color: #39FF13;
+            }
+
+            a {
+                font-size: 22px;
+                color: #4d4d4e;
+                display: block;
+                line-height: 51px;
+                // height: 51px;
+                position: relative;
+                text-decoration: none;
+                i {
+                    transition: all 0.3s ease-out;
+                }
+
+                &:hover {
+                    color: var(--primarycolour);
+
+                    svg {
+                        opacity: 0;
+                    }
+
+                    &:after {
+                        opacity: 1;
+                    }
+                }
+
+                &::after {
+                    content: "";
+                    font-size: 9px;
+                    letter-spacing: 2px;
+                    position: absolute;
+                    top: -15px;
+                    display: block;
+                    width: 100%;
+                    text-align: center;
+                    opacity: 0;
+                    transition: all 0.3s ease-out;
+                    color: #39FF13;
+                }
+
+                &:first-child {
+                    &::after {
+                        content: "HOME";
+                    }
+                }
+            }
+
+            a.about-link {
+                &::after {
+                    content: "ABOUT";
+                    left: -5px;
+                }
+            }
+
+            a.project-link {
+                &::after {
+                    content: "PROJECTS";
+                    left: -14px;
+                }
+            }
+
+            a.contact-link {
+                &::after {
+                    content: "CONTACT";
+                    left: -14px;
+                }
+            }
+
+            a.active {
+                svg {
+                    color: var(--primarycolour);
+                }
+            }
+        }
+    }
 }
